--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+     <div class="fluid">
+		 <div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+	     <div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+         <div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+	 </div>
 </body>
 
 </html>
