--- a/main.html
+++ b/main.html
@@ -11,9 +11,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
      <div class="fluid">
-		 <div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
-	     <div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
-         <div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+		 <table>
+		 <td><div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+		 </td>
+	     <td><div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+		 </td>
+         <td><div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
+		 </td> 
+	     </table>
 	 </div>
 </body>
 
