--- a/main.html
+++ b/main.html
@@ -10,16 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-     <div class="fluid">
-		 <table>
-		 <td><div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
-		 </td>
-	     <td><div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
-		 </td>
-         <td><div class="on"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg" ></div>
-		 </td> 
-	     </table>
-	 </div>
+    <div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+  <div class="row">
+    <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-4"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+    <div class="col-sm-4"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+  </div>
+</div>
 </body>
 
 </html>
