--- a/main.html
+++ b/main.html
@@ -23,6 +23,8 @@
     <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
     <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
     <div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+	<div class="col-sm-1"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
+  
   </div>
   <div class="row">
     <div class="col-sm-2"><img src="https://avatars.steamstatic.com/090443b69c5a0e24c62b8e22fa63e047c2f2e77b_full.jpg"></div>
